--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
+    "bootstrap-vue": "^2.21.2",
+    "bsv": "^2.0.10",
+    "paypresto.js": "^0.1.0-beta.13",
+    "txforge": "^0.2.5",
     "vue": "^2.6.11",
     "vue-router": "^3.1.3"
   },
